# java-atk-wrapper

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING.LESSER  ChangeLog  HACKING  INSTALL  JavaInfo.java  MAINTAINERS  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  configure.in  java-atk-wrapper.doap
jni/src/: AtkWrapper.c  AtkWrapper.h  Makefile.am  jawaction.c  jawcomponent.c  jaweditabletext.c  jawhyperlink.c  jawhyperlink.h  jawhypertext.c  jawimage.c  jawimpl.c  jawimpl.h  jawobject.c  jawobject.h  jawselection.c  jawtable.c  jawtablecell.c  jawtext.c  jawtoplevel.c  jawtoplevel.h  jawutil.c  jawutil.h  jawvalue.c  jawwindow.c  jawwindow.h  jni_AtkWrapper.h
wrapper/: Makefile.am  module-info.java
wrapper/org/: Makefile.am
wrapper/org/GNOME/: Makefile.am
wrapper/org/GNOME/Accessibility/: AtkAction.java  AtkComponent.java  AtkCoordType.java  AtkEditableText.java  AtkHyperlink.java  AtkHypertext.java  AtkImage.java  AtkKeyEvent.java  AtkLayer.java  AtkObject.java  AtkSelection.java  AtkSignal.java  AtkTable.java  AtkTableCell.java  AtkText.java  AtkTextBoundary.java  AtkUtil.java  AtkValue.java  AtkWindow.java  AtkWrapper.java  AtkWrapper.java.in  Makefile.am
